# netify-fwa

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile.am  Makefile.openwrtpackagehack  README.md  autogen.sh  configure.ac  gitlab-ci.yml  nfa_clearos.py  nfa_config.py  nfa_daemonize.py  nfa_defaults.py.in  nfa_firewall.py  nfa_firewalld.py  nfa_fw_bpf.py  nfa_fw_clearos.py  nfa_fw_firewalld.py  nfa_fw_iptables.py  nfa_fw_openwrt.py  nfa_fw_pf.py  nfa_fw_pfsense.py  nfa_global.py  nfa_ipset.py  nfa_iptables.py  nfa_main.py  nfa_netify_api.py  nfa_netifyd.py  nfa_rule.py  nfa_socket.py  nfa_task.py  nfa_timer.py  nfa_util.py  nfa_version.py  nfa_version.py.in
.github/workflows/: main.yml
deploy/: .gitignore  Makefile.am  netify-fwa.ini.in  netify-fwa.json  netify-fwa.sh  netify-fwa.sh.in
deploy/clearos/: 10-netify-fwa  netify-fwa.ini  netify-fwa.spec.in
deploy/debian/: .gitignore  Makefile.am  debian.changelog.in  debian.conffiles.in  debian.control.in  debian.init.in  debian.postinst.in  debian.rules.in  netify-fwa.dsc.in
deploy/openwrt/: netify-fwa  netify-fwa.init
deploy/openwrt/os/: Makefile.in
deploy/openwrt/package/: .gitignore  control  make-package.sh.in
deploy/pfsense/: .gitignore  Makefile.in  pkg-message  pkg-plist
deploy/pfsense/files/: netify-fwa.in
deploy/pfsense/files/usr/local/etc/netify-fwa/: netify-fwa.ini
deploy/pfsense/files/usr/local/pkg/: netify-fwa.xml
deploy/pfsense/files/usr/local/pkg/netify-fwa/: netify-fwa.inc  netify-fwa_defs.inc
deploy/pfsense/files/usr/local/pkg/shortcuts/: netify-fwa.inc
deploy/pfsense/files/usr/local/share/pfSense-pkg-netify-fwa/: info.xml
deploy/pfsense/files/usr/local/www/netify-fwa/: netify-fwa_apps.php  netify-fwa_protos.php  netify-fwa_status.php  netify-fwa_whitelist.php
deploy/rpm/: .gitignore  netify-fwa.spec.in
deploy/systemd/: .gitignore  Makefile.am  netify-fwa.service  netify-fwa.service.in  netify-fwa.tmpf
pf/: .gitignore  Makefile.am  pf.c  pf.h
